[project]
name = "fastapi-tz"
version = "0.1.0"
description = "API service for booking tables in a restaurant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
